--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>happy birtday due </title>
+    <title>happy birtday dude </title>
   </head>
   <body>
     <center><h1>HAPPY BDDDDAY MAAZIUNNNNNNN💫💥</h1></center>
